--- a/index.html
+++ b/index.html
@@ -68,5 +68,7 @@
         </div>
       </div>
     </main>
+    <script src="./payoo.js"></script>
+    <script src="./utilities.js"></script>
   </body>
 </html>
